Update documentation to replace all instances of "OpenCode" with "Seemodo AI" across multiple files, including AGENTS.md, README.md, and various API reference documents, ensuring consistency with the new branding.

--- a/api-reference/endpoint/create-sandbox.mdx
+++ b/api-reference/endpoint/create-sandbox.mdx
@@ -40,7 +40,7 @@ No request body required. Creates a Vercel sandbox with automatic Vite React set
 POST /api/create-ai-sandbox-v2
 ```
 
-Creates a sandbox using the Modal cloud backend with OpenCode AI integration.
+Creates a sandbox using the Modal cloud backend with Seemodo AI integration.
 
 ### Request Body
 
@@ -204,6 +204,6 @@ vercelSandbox: {
 ## Notes
 
 - Sandboxes timeout after the configured duration (default 60 minutes)
-- Modal sandboxes include OpenCode AI for intelligent code generation
-- Vercel sandboxes are lighter but don't include OpenCode
+- Modal sandboxes include Seemodo AI for intelligent code generation
+- Vercel sandboxes are lighter but don't include Seemodo AI
 - Only one sandbox is typically active at a time per session
