--- a/api-reference/endpoint/seemodo-cloud.mdx
+++ b/api-reference/endpoint/seemodo-cloud.mdx
@@ -101,7 +101,7 @@ curl -X POST http://app.seemodo.ai/api/seemodo-cloud \
     Retrieves anon and service_role keys.
   </Step>
   <Step title="Configure MCP">
-    Sets up the Supabase MCP server in OpenCode.
+    Sets up the Supabase MCP server in Seemodo AI.
   </Step>
   <Step title="Install Client">
     Adds `@supabase/supabase-js` to the sandbox.
@@ -291,7 +291,7 @@ flowchart TD
     G --> H[Configure MCP server]
     H --> I[Install client library]
     I --> J[Generate config files]
-    J --> K[Restart OpenCode]
+    J --> K[Restart Seemodo AI]
     K --> L[Ready for AI interaction]
 ```
 
