--- a/de/api-reference/endpoint/create-sandbox.mdx
+++ b/de/api-reference/endpoint/create-sandbox.mdx
@@ -40,7 +40,7 @@ Kein Request Body erforderlich. Erstellt eine Vercel-Sandbox mit automatischem V
 POST /api/create-ai-sandbox-v2
 ```
 
-Erstellt eine Sandbox mit dem Modal Cloud-Backend mit OpenCode KI-Integration.
+Erstellt eine Sandbox mit dem Modal Cloud-Backend mit Seemodo AI-Integration.
 
 ### Request Body
 
@@ -204,6 +204,6 @@ vercelSandbox: {
 ## Hinweise
 
 - Sandboxes haben Timeout nach konfigurierter Dauer (Standard 60 Minuten)
-- Modal-Sandboxes beinhalten OpenCode KI für intelligente Code-Generierung
-- Vercel-Sandboxes sind leichter aber ohne OpenCode
+- Modal-Sandboxes beinhalten Seemodo AI für intelligente Code-Generierung
+- Vercel-Sandboxes sind leichter aber ohne Seemodo AI
 - Typisch ist nur eine Sandbox pro Session aktiv
