--- a/de/api-reference/endpoint/seemodo-cloud.mdx
+++ b/de/api-reference/endpoint/seemodo-cloud.mdx
@@ -101,7 +101,7 @@ curl -X POST http://app.seemodo.ai/api/seemodo-cloud \
     Ruft anon und service_role Keys ab.
   </Step>
   <Step title="MCP konfigurieren">
-    Richtet den Supabase MCP-Server in OpenCode ein.
+    Richtet den Supabase MCP-Server in Seemodo AI ein.
   </Step>
   <Step title="Client installieren">
     Fügt `@supabase/supabase-js` zur Sandbox hinzu.
@@ -291,7 +291,7 @@ flowchart TD
     G --> H[MCP-Server konfigurieren]
     H --> I[Client-Bibliothek installieren]
     I --> J[Config-Dateien generieren]
-    J --> K[OpenCode neustarten]
+    J --> K[Seemodo AI neustarten]
     K --> L[Bereit für KI-Interaktion]
 ```
 
