--- a/de/seemodo/ai-coder.mdx
+++ b/de/seemodo/ai-coder.mdx
@@ -1,10 +1,10 @@
 ---
 title: "KI-Coder"
-description: "Nutze den OpenCode KI-Assistenten um Anwendungen zu erstellen, bearbeiten und zu verfeinern"
+description: "Nutze den Seemodo AI-Assistenten um Anwendungen zu erstellen, bearbeiten und zu verfeinern"
 icon: "robot"
 ---
 
-Der KI-Coder (powered by OpenCode) ist Seemodos intelligenter Coding-Assistent. Er kann Dateien lesen, Code schreiben, Befehle ausführen und Fehler automatisch beheben - alles durch natürlichsprachliche Konversation.
+Der KI-Coder ist Seemodos intelligenter Coding-Assistent. Er kann Dateien lesen, Code schreiben, Befehle ausführen und Fehler automatisch beheben - alles durch natürlichsprachliche Konversation.
 
 ## Übersicht
 
