--- a/de/seemodo/cloud.mdx
+++ b/de/seemodo/cloud.mdx
@@ -127,7 +127,7 @@ Erstelle RLS-Policies für die posts-Tabelle:
 ```mermaid
 sequenceDiagram
     participant Du
-    participant KI as OpenCode KI
+    participant KI as Seemodo AI
     participant MCP as MCP Server
     participant Supabase
 
