--- a/de/seemodo/getting-started.mdx
+++ b/de/seemodo/getting-started.mdx
@@ -142,9 +142,9 @@ Vollständige Entwicklungsumgebung mit:
 
 ## Mit der KI arbeiten
 
-### Das OpenCode-Panel
+### Das Seemodo AI-Panel
 
-Sobald eine Sandbox aktiv ist, bietet das OpenCode-Panel direkte KI-Interaktion:
+Sobald eine Sandbox aktiv ist, bietet das Seemodo AI-Panel direkte KI-Interaktion:
 
 <Tabs>
   <Tab title="Agent-Modus">
