--- a/de/seemodo/introduction.mdx
+++ b/de/seemodo/introduction.mdx
@@ -98,7 +98,7 @@ flowchart TB
 
     subgraph Sandbox["Sandbox-Runtime"]
         Vite["Vite Dev-Server"]
-        OpenCode["OpenCode KI"]
+        SeemodAI["Seemodo AI"]
         Files["Dateisystem"]
     end
 
