--- a/de/seemodo/troubleshooting.mdx
+++ b/de/seemodo/troubleshooting.mdx
@@ -102,7 +102,7 @@ Das Standard-Timeout ist 60 Minuten. Zum Verlängern:
 
 ### KI antwortet nicht
 
-Wenn das OpenCode-Panel "Denkt" unbegrenzt anzeigt:
+Wenn das Seemodo AI-Panel "Denkt" unbegrenzt anzeigt:
 
 1. Verbindungsanzeige prüfen (sollte grün sein)
 2. Reconnect-Button klicken
@@ -205,7 +205,7 @@ tldraw erfordert WebGL-Unterstützung:
 | Fehler | Bedeutung | Lösung |
 |--------|-----------|--------|
 | `SANDBOX_NOT_FOUND` | Sandbox abgelaufen oder existiert nicht | Neuen Screen generieren |
-| `OPENCODE_CONNECTION_FAILED` | OpenCode-Server nicht erreichbar | Warten bis Sandbox vollständig initialisiert |
+| `SEEMODO_AI_CONNECTION_FAILED` | Seemodo AI-Server nicht erreichbar | Warten bis Sandbox vollständig initialisiert |
 | `MODEL_UNAVAILABLE` | KI-Modell nicht verfügbar | Anderes Modell probieren |
 | `RATE_LIMIT_EXCEEDED` | Zu viele Anfragen | Ein paar Minuten warten |
 | `INSUFFICIENT_CREDITS` | Keine Credits mehr | Mehr kaufen oder auf Refresh warten |
@@ -215,7 +215,7 @@ tldraw erfordert WebGL-Unterstützung:
 Wenn diese Lösungen dein Problem nicht beheben:
 
 1. **Konsole prüfen** - F12 drücken und nach Fehlermeldungen suchen
-2. **Logs exportieren** - Klicke "Export" im OpenCode-Panel
+2. **Logs exportieren** - Klicke "Export" im Seemodo AI-Panel
 3. **Minimale Reproduktion erstellen** - Notiere die genauen Schritte zur Reproduktion
 4. **Support kontaktieren** - E-Mail an support@seemodo.ai mit:
    - Browser- und Betriebssystem-Version
