--- a/seemodo/ai-coder.mdx
+++ b/seemodo/ai-coder.mdx
@@ -1,10 +1,10 @@
 ---
 title: "AI Coder"
-description: "Use the OpenCode AI assistant to build, edit, and refine your applications"
+description: "Use the Seemodo AI assistant to build, edit, and refine your applications"
 icon: "robot"
 ---
 
-The AI Coder (powered by OpenCode) is Seemodo's intelligent coding assistant. It can read files, write code, run commands, and automatically fix errors - all through natural language conversation.
+The AI Coder is Seemodo's intelligent coding assistant. It can read files, write code, run commands, and automatically fix errors - all through natural language conversation.
 
 ## Overview
 
