--- a/seemodo/cloud.mdx
+++ b/seemodo/cloud.mdx
@@ -127,7 +127,7 @@ Create RLS policies for the posts table:
 ```mermaid
 sequenceDiagram
     participant You
-    participant AI as OpenCode AI
+    participant AI as Seemodo AI
     participant MCP as MCP Server
     participant Supabase
 
