--- a/seemodo/getting-started.mdx
+++ b/seemodo/getting-started.mdx
@@ -142,9 +142,9 @@ Full development environment with:
 
 ## Working with the AI
 
-### The OpenCode Panel
+### The Seemodo AI Panel
 
-Once a sandbox is active, the OpenCode panel provides direct AI interaction:
+Once a sandbox is active, the Seemodo AI panel provides direct AI interaction:
 
 <Tabs>
   <Tab title="Agent Mode">
