--- a/seemodo/troubleshooting.mdx
+++ b/seemodo/troubleshooting.mdx
@@ -102,7 +102,7 @@ The default timeout is 60 minutes. To extend:
 
 ### AI not responding
 
-If the OpenCode panel shows "Thinking" indefinitely:
+If the Seemodo AI panel shows "Thinking" indefinitely:
 
 1. Check the connection indicator (should be green)
 2. Click the Reconnect button
@@ -205,7 +205,7 @@ tldraw requires WebGL support:
 | Error | Meaning | Solution |
 |-------|---------|----------|
 | `SANDBOX_NOT_FOUND` | Sandbox expired or doesn't exist | Generate a new screen |
-| `OPENCODE_CONNECTION_FAILED` | Can't reach OpenCode server | Wait for sandbox to fully initialize |
+| `SEEMODO_AI_CONNECTION_FAILED` | Can't reach Seemodo AI server | Wait for sandbox to fully initialize |
 | `MODEL_UNAVAILABLE` | AI model is down | Try a different model |
 | `RATE_LIMIT_EXCEEDED` | Too many requests | Wait a few minutes |
 | `INSUFFICIENT_CREDITS` | Out of credits | Purchase more or wait for refresh |
@@ -215,7 +215,7 @@ tldraw requires WebGL support:
 If these solutions don't resolve your issue:
 
 1. **Check the console** - Press F12 and look for error messages
-2. **Export logs** - Click "Export" in the OpenCode panel
+2. **Export logs** - Click "Export" in the Seemodo AI panel
 3. **Create a minimal reproduction** - Note the exact steps to reproduce
 4. **Contact support** - Email support@seemodo.ai with:
    - Browser and OS version
