--- a/seemodo/introduction.mdx
+++ b/seemodo/introduction.mdx
@@ -98,7 +98,7 @@ flowchart TB
 
     subgraph Sandbox["Sandbox Runtime"]
         Vite["Vite Dev Server"]
-        OpenCode["OpenCode AI"]
+        SeemodAI["Seemodo AI"]
         Files["File System"]
     end
 
