--- a/seemodo/sandbox.mdx
+++ b/seemodo/sandbox.mdx
@@ -18,14 +18,14 @@ Seemodo uses cloud sandboxes to run your generated applications. Each sandbox pr
     |---------|---------|
     | Timeout | 1-24 hours (configurable) |
     | Package Manager | pnpm |
-    | AI Integration | OpenCode server included |
+    | AI Integration | Seemodo AI server included |
     | Git | Auto-commit after AI changes |
     | Preview | Encrypted tunnel URLs |
 
     **Included Services:**
     - Vite dev server (port 5173)
     - FastAPI server (port 8000)
-    - OpenCode AI server (port 4097)
+    - Seemodo AI server (port 4097)
 
     **Setup:**
     ```bash
@@ -90,7 +90,7 @@ Seemodo uses cloud sandboxes to run your generated applications. Each sandbox pr
 |---------|-------|-----|--------|
 | Default Timeout | 1 hour | 60 min | 15 min |
 | Max Timeout | 24 hours | 60 min | 15 min |
-| OpenCode AI | ✅ Built-in | ❌ | ❌ |
+| Seemodo AI | ✅ Built-in | ❌ | ❌ |
 | Git Integration | ✅ Auto-commit | ❌ | ❌ |
 | Package Manager | pnpm | npm | npm |
 | Startup Time | ~5 seconds | ~10 seconds | ~3 seconds |
@@ -121,7 +121,7 @@ The process:
 1. Request new sandbox from provider
 2. Wait for container startup
 3. Initialize Vite dev server
-4. Start OpenCode AI (Modal only)
+4. Start Seemodo AI (Modal only)
 5. Return preview URL
 
 ### Sandbox States
@@ -142,7 +142,7 @@ flowchart TB
         direction TB
         ViteServer["Vite Dev Server\n:5173"]
         FastAPIServer["FastAPI Server\n:8000"]
-        OpenCodeServer["OpenCode AI\n:4097"]
+        SeemodAIServer["Seemodo AI\n:4097"]
         Git["Git Repository"]
         Files["/root/vite-app\nProject Files"]
     end
@@ -150,13 +150,13 @@ flowchart TB
     subgraph External["External Access"]
         Preview["Preview URL\n(encrypted tunnel)"]
         API["API URL\n(for terminal)"]
-        OpenCode["OpenCode URL\n(for AI chat)"]
+        SeemodAI["Seemodo AI URL\n(for AI chat)"]
     end
 
     Preview --> ViteServer
     API --> FastAPIServer
-    OpenCode --> OpenCodeServer
-    OpenCodeServer --> Files
+    SeemodAI --> SeemodAIServer
+    SeemodAIServer --> Files
     Files --> Git
     ViteServer --> Files
 ```
@@ -278,7 +278,7 @@ pnpm dev
   <Accordion title="AI not connecting">
     - Ensure you're using Modal provider
     - Wait for full sandbox initialization
-    - Check OpenCode URL is available
+    - Check Seemodo AI URL is available
     - Look for connection errors in the panel
   </Accordion>
 </AccordionGroup>
